--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ organizerLogo: "/img/seo/organizer-logo.png"
 organizerLink: "http://www.gdgtarragona.net/"
 
 # Head
-metaKeywords: "event, gdg, devfest, google, programming, android, chrome, developers, reus, Tarragona"
+metaKeywords: "event, gdg, programming, game jam, games, computer games, video games, developers, reus, Tarragona"
 twitterAccount: "@GDGTarragona"
 socialImageSrcGooglePlus: "/img/seo/sharing-google-plus.png"
 socialImageSrcTwitter: "/img/seo/sharing-twitter.png"
@@ -51,7 +51,7 @@ rightNavigationButtons:
 # Hero Block
 heroImage: "hero.jpg"
 heroTitle: "Game Jam <typeout> 2016"
-eventDate: “25 Octubre, 2014"
+eventDate: “06 Mayo, 2016"
 typeoutTextValues: '"", "Reus", "URV"'
 typeoutFallback: "Season"
 heroButtons:
@@ -59,7 +59,7 @@ heroButtons:
  - {permalink: "/#tickets", text: "Consigue una entrada"}
 
 # About Block
-aboutTitle: “Sobre GDG DevFest"
+aboutTitle: “Sobre GDG Tarragona"
 aboutBlock:
  - {title: "Conferencias", image: "conference.jpg", text: "The biggest Google related event in the country carefully crafted for you by GDG community! Awesome speakers and lot's of fun!" }
  - {title: "Workshops", image: "workshop.jpg", text: "Full-day of workshops, hands-on experience, hacking and debugging. Come and tame your favourite technology!" }
@@ -109,7 +109,7 @@ venueFeatures: ["firaReus, Centro de Ferias y Convenciones", "Localizado en la C
 # Tweets Feed Block
 tweetsFeedImage: "twitter-feed.jpg"
 tweetsFeedTitle: "What's Up?"
-twitterHashTag: "devfest Reus"
+twitterHashTag: "GameJamReus"
 twitterFeed: ""
 
 # Partners Block
