--- a/_config.yml
+++ b/_config.yml
@@ -67,9 +67,9 @@ aboutBlock:
 # Statistic Block
 statisticBlockImage: "statistic.jpg"
 statisticBlock:
- - {count: "130", specialCharacter: "+", info: "attendees", detail: "from everywhere"}
- - {count: "12", specialCharacter: "+", info: "hours", detail: "of pure Google technologies"}
- - {count: "9", specialCharacter: "+", info: "speakers", detail: "from country and beyond"}
+ - {count: "100", specialCharacter: "+", info: "attendees", detail: "from everywhere"}
+ - {count: "36", specialCharacter: "+", info: "hours", detail: "of pure Game Jam"}
+ - {count: "4", specialCharacter: "+", info: "speakers", detail: "from different areas"}
 
 # Latest News Block
 latestNewsTitle: "Latest news"
