--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -5,7 +5,7 @@
     company: "Digital Legends Entertainment"
     title: ""
     bio: ""
-    thumbnailUrl: unkown_boy.png
+    thumbnailUrl: jordiDuch.png
     rockstar: true
     social:
     - {name: "site", link: "https://es.linkedin.com/in/raul-herrero-085aa05"}
@@ -16,7 +16,7 @@
     company: "Escola de Cinema de Reus"
     title: ""
     bio: ""
-    thumbnailUrl: unkown_boy.png
+    thumbnailUrl: jordiDuch.png
     rockstar: true
     social:
     - {name: "site", link: "https://www.linkedin.com/in/daniel-villanueva-margalef-a9b62718/"}
@@ -28,7 +28,7 @@
     company: "Digivision"
     title: ""
     bio: ""
-    thumbnailUrl: unkown_boy.png
+    thumbnailUrl: jordiDuch.png
     rockstar: true
     social:
     - {name: "site", link: "https://www.linkedin.com/in/jose-antonio-mu%C3%B1iz-olivares-52746262/en"}
