--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -1,35 +1,136 @@
 -
     id: 1
-    name: "Raul"
-    surname: "Herrero"
-    company: "Digital Legends Entertainment"
-    title: ""
+    name: "Jordi"
+    surname: "Rodriguez"
+    company: "Dinamitzador digital"
+    title: "Android Wear"
     bio: ""
-    thumbnailUrl: jordiDuch.png
+    thumbnailUrl: jordick.jpg
     rockstar: true
     social:
-    - {name: "site", link: "https://es.linkedin.com/in/raul-herrero-085aa05"}
+    - {name: "google-plus", link: "https://plus.google.com/+JordiRodriguezSoler/"}
+    - {name: "site", link: "http://www.jordick.es/"}
 -
     id: 2
-    name: "Daniel"
-    surname: "Villanueva"
-    company: "Escola de Cinema de Reus"
-    title: ""
-    bio: ""
-    thumbnailUrl: jordiDuch.png
+    name: "Albert"
+    surname: "Abelló"
+    company: "Ilustrum"
+    title: "Building the money machine"
+    bio: "Game designer i emprenedor. Creador del joc de cartes coleccionables i trivial ilustrum."
+    thumbnailUrl: albertAbello.jpg
     rockstar: true
     social:
-    - {name: "site", link: "https://www.linkedin.com/in/daniel-villanueva-margalef-a9b62718/"}
-
+    - {name: "google-plus", link: "https://plus.google.com/+AlbertAbello/"}
+    - {name: "site", link: "http://www.illustrum.com/"}
 -
     id: 3
-    name: "Jose Antonio"
-    surname: "Muñiz"
-    company: "Digivision"
+    name: "Jordi"
+    surname: "Duch"
+    company: "URV"
     title: ""
-    bio: ""
+    bio: "Sóc enginyer en Informatica per la URV i doctor en Física per la Universitat de Barcelona. Actualment sóc professor del Departament d'Enginyeria Informatica i Matematiques de la URV, consultor a la UOC en temes de jocs i gamificació. També soc co-fundador de l'empresa chimu solutions dedicada a big data analytics en el mon dels esports."
     thumbnailUrl: jordiDuch.png
     rockstar: true
     social:
-    - {name: "site", link: "https://www.linkedin.com/in/jose-antonio-mu%C3%B1iz-olivares-52746262/en"}
+    - {name: "google-plus", link: "https://plus.google.com/101787050467842633901/"}
 
+-
+    id: 0
+    name: ""
+    surname: "TomasGiS"
+    company: "Sm4rt Cities"
+    title: ""
+    bio: ""
+    thumbnailUrl: TomasGiS.jpg
+    rockstar: true
+
+    social:
+    - {name: "google-plus", link: "https://google.com/+TomasGiS"}
+    - {name: "twitter", link: "https://twitter.com/TomasGiS"}
+    - {name: "github", link: "https://github.com/TomasGiS"}
+    - {name: "site", link: "http://www.tomasgis.cat/"}
+-
+    id: 4
+    name: "Joan"
+    surname: "Llimiñana"
+    company: "GDG Lleida"
+    title: "Organizer"
+    bio: ""
+    thumbnailUrl: joan.jpg
+    rockstar: true
+    social:
+    - {name: "google-plus", link: "https://plus.google.com/+JoanLlimiñanaSabaté/"}
+-
+    id: 5
+    name: "Polina"
+    surname: "Flegontovna"
+    company: "Redbooth"
+    title: ""
+    bio: "Diseñadora de interacción en Redbooth
+    Diseñadora grafica y web, autodidacta, fotografa y amante de manualidades.
+    La interfaz es un lenguaje común entre el sistema y el usuario."
+    thumbnailUrl: polina.jpg
+    rockstar: true
+    social:
+    - {name: "google-plus", link: "https://plus.google.com/+PolinaFlegontovna/"}
+    - {name: "twitter", link: "https://twitter.com/flegontovna"}
+
+-
+    id: 6
+    name: "Rubén"
+    surname: "Serrano"
+    company: "Redbooth"
+    title: "Lead Android Developer en Redbooth"
+    bio: ""
+    thumbnailUrl: ruben.jpg
+    rockstar: true
+    social:
+    - {name: "google-plus", link: "https://plus.google.com/+RubénSerrano"}
+-
+    id: 7
+    name: "Alex"
+    surname: "Cabrera"
+    company: "U-play"
+    title: ""
+    bio: "Vaig començar a picar tecles per a poder fer els meus propis jocs, cosa que em va dur a treballar a U-Play Online on m'encarrego del departament de desenvolupament. M'agrada ficar tota la meva passió als jocs que publiquem com si fossin per a mi mateix. Molt fan de tot el que fa 'llumetes', especialment dels dispositius Android."
+    thumbnailUrl: alex.jpg
+    rockstar: true
+    social:
+    - {name: "google-plus", link: "https://plus.google.com/+AlexCabreraGil/"}
+    - {name: "twitter", link: "https://twitter.com/alexcabrera_pc"}
+-
+    id: 8
+    name: "Vanessa"
+    surname: "Galcerà"
+    company: "Sm4rt Cities"
+    title: ""
+    bio: ""
+    thumbnailUrl: vanessaGalcera.jpg
+    rockstar: true
+    social:
+    - {name: "google-plus", link: "https://google.com/+VanessaGalcera"}
+    - {name: "twitter", link: "https://twitter.com/vanessagare"}
+    - {name: "site", link: "http://www.vgalcera.wordpress.com/"}
+
+-
+    id: 11
+    name: "Cristina"
+    surname: "Fernandez"
+    company: "GDG Lleida"
+    title: "Organizer"
+    bio: ""
+    thumbnailUrl: cristina.png
+    rockstar: true
+    social:
+    - {name: "google-plus", link: "https://google.com/115851459432041211023"}
+-
+    id: 10
+    name: "Andreu"
+    surname: "Ibañez"
+    company: "GDG Lleida"
+    title: "Organizer"
+    bio: "Andreu es Project Manager en Ponent 2002, un pyme tecnológica localizada en Lleida. Con 30 años de experiencia en tecnología, siempre ha estado involucrado en este sector IT y disfruta innovando constantemente. Actualmente se dedica la creación de nuevas tecnologías para áreas tan dispares como la Arqueología, clústers de visualización, láseres y drones. Es especialista en el ecosistema de Google, donde es Glass Explorer con la startup MundoGlass, mentor del Google Summer of Code con los proyectos Liquid Galaxy y CC Extractor, tiene montado una laboratorio único en el mundo para hacer proyectos con las diversas tecnologías de mapas de Google, el Liquid Galaxy LAB, y es además fundador y organizador del Google Developers Group GDG Lleida."
+    thumbnailUrl: andreu.png
+    rockstar: true
+    social:
+    - {name: "google-plus", link: "https://google.com/+AndreuIbáñez"}
