--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1,22 +1,15 @@
 
--
-  group: "Premium sponsor"
-  elements: 
-    - {name: "Google", description: "Google", link: "https://www.google.com.ua/intl/en/about/", imageUrl: "google.svg"}
-    - {name: "Sm4rt Cities", description: "Sm4rt Cities", link: "http://www.smart4cities.net", imageUrl: "smart4cities.png"}
-    - {name: "Redessa", description: "Redessa", link: "http://www.redessa.cat", imageUrl: "redessa.jpg"}
-- 
+
   group: "With support of"
   elements: 
-    - {name: "Reus Tansport", description: "Google", link: "https://www.reustransport.com", imageUrl: "reustransport.png", width: "120px"}
-    - {name: "Remotte", description: "Remotte", link: "http://www.remotte.com", imageUrl: "remotte.svg", width: "120px"}
-    - {name: "Tinet", description: "Tinet", link: "http://www.tinet.cat/", imageUrl: "tinet.png"}
+    - {name: "Ajuntament de Reus", description: "Google", link: "https://www.reus.cat", imageUrl: "reustransport.png", width: "120px"}
+    - {name: "firaReus", description: "firaReus", link: "http://www.firareus.com", imageUrl: "firareus.png", width: "125px"}
 
 
-- 
+
+-
   group: "Sponsors"
   elements:
-    - {name: "2Xips", description: "2Xips", link: "http://www.2xips.cat", imageUrl: "none.png"}
-    - {name: "ViscaLaBonaVida", description: "Visca La Bona Vida", link: "http://www.viscalabonavida.cat", imageUrl: "none.png"}
-    - {name: "Jordick.es", description: "Jordick.es", link: "http://www.jordick.es/new/", imageUrl: "none.png"}
-    - {name: "Dos Punts", description: "Dos Punts", link: "http://www.dospunts.cat/", imageUrl: "dospunts.png"}
+    - {name: "Deim", description: "Deim URV", link: "http://deim.urv.cat/", imageUrl: "dospunts.png"}
+    - {name: "El Gato Gaming", description: "El Gato Gaming", link: "https://www.elgato.com/es/gaming", imageUrl: "dospunts.png"}
+    - {name: "Mensula Studio", description: "Mensula", link: "http://www.mensula.cat/", imageUrl: "dospunts.png"}
