Second day scheduler

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -29,3 +29,54 @@
         endTime: "21:10",
         sessionIds: [105]
     }
+-
+    date: "2016-05-7"
+    dateReadable: "Maig 7"
+    tracks:
+        - {title: "GameJam", color: "#90be4e"}
+    timeslots:
+    - {
+        startTime: "9:00",
+        endTime: "9:20",
+        sessionIds: [101]
+    }
+    - {
+        startTime: "9:20",
+        endTime: ":10:00",
+        sessionIds: [001]
+    }
+    - {
+        startTime: "10:00",
+        endTime: "10:40",
+        sessionIds: [002]
+    }
+    - {
+        startTime: "10:40",
+        endTime: "11:20",
+        sessionIds: [503]
+    }
+    - {
+        startTime: "11:20",
+        endTime: "12:00",
+        sessionIds: [002]
+    }
+    - {
+        startTime: "12:00",
+        endTime: "13:30",
+        sessionIds: [104]
+    }
+    - {
+        startTime: "13:30",
+        endTime: "15:00",
+        sessionIds: [503]
+    }
+    - {
+        startTime: "15:00",
+        endTime: "21:00",
+        sessionIds: [104]
+    }
+    - {
+        startTime: "21:00",
+        endTime: "21:10",
+        sessionIds: [105]
+    }
