--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -58,7 +58,7 @@
     - {
         startTime: "11:20",
         endTime: "12:00",
-        sessionIds: [002]
+        sessionIds: [003]
     }
     - {
         startTime: "12:00",
@@ -78,5 +78,55 @@
     - {
         startTime: "21:00",
         endTime: "21:10",
+        sessionIds: [105]
+    }
+    date: "2016-05-8"
+    dateReadable: "Maig 8"
+    tracks:
+        - {title: "GameJam", color: "#90be4e"}
+    timeslots:
+    - {
+        startTime: "9:00",
+        endTime: "9:20",
+        sessionIds: [101]
+    }
+    - {
+        startTime: "9:20",
+        endTime: ":11:00",
+        sessionIds: [104]
+    }
+    - {
+        startTime: "11:00",
+        endTime: "11:30",
+        sessionIds: [307]
+    }
+    - {
+        startTime: "11:30",
+        endTime: "13:30",
+        sessionIds: [104]
+    }
+    - {
+        startTime: "13:30",
+        endTime: "14:30",
+        sessionIds: [503]
+    }
+    - {
+        startTime: "14:30",
+        endTime: "15:40",
+        sessionIds: [104]
+    }
+    - {
+        startTime: "15:40",
+        endTime: "16:00",
+        sessionIds: [106]
+    }
+    - {
+        startTime: "16:30",
+        endTime: "19:00",
+        sessionIds: [107]
+    }
+    - {
+        startTime: "19:00",
+        endTime: "19:10",
         sessionIds: [105]
     }
