--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -93,7 +93,7 @@
     }
     - {
         startTime: "9:20",
-        endTime: ":11:00",
+        endTime: "11:00",
         sessionIds: [104]
     }
     - {
