--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -4,7 +4,8 @@
     - {name: "GDG Tarragona", description: "GDG Tarragona - Google Developers Group Tarragona", link: "http://www.gdgtarragona.net", imageUrl: "organizer-logo.svg"}
 - 
   group: "Co-organizers"
-  elements: 
-    - {name: "TarracoDroid", description: "TarracoDroid", link: "http://www.tarracodroid.com", imageUrl: "tarracodroid.png"}
+  elements:
+    - {name: "Alumnes Informàtica URV", description: "Alumnes Informàtica URV", link: "http://gdgtarragona.github.io/gamejamreus/", imageUrl: ""}
+    - {name: "Thinkit_ TGN Group", description: "Thinkit_ TGN Group", link: "https://www.facebook.com/thinkittgn", imageUrl: "organizer-logo.svg"}
 
 
