--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -2,14 +2,8 @@
 -
   group: "With support of"
   elements: 
-    - {name: "Ajuntament de Reus", description: "Ajuntament de Reus", link: "https://www.reus.cat", imageUrl: "ajuntament_reus.jpg", width: "120px"}
-    - {name: "firaReus", description: "firaReus", link: "http://www.firareus.com", imageUrl: "firareus.png", width: "125px"}
-
-
-
--
-  group: "Sponsors"
-  elements:
-    - {name: "Deim", description: "Deim URV", link: "http://deim.urv.cat/", imageUrl: "logo_deim.png"}
+    - {name: "Ajuntament de Reus", description: "Ajuntament de Reus", link: "https://www.reus.cat", imageUrl: "ajuntament_reus.jpg", width: "130px"}
+    - {name: "firaReus", description: "firaReus", link: "http://www.firareus.com", imageUrl: "firareus.png", width: "100px"}
+    - {name: "Deim", description: "Deim URV", link: "http://deim.urv.cat/", imageUrl: "logo_deim.png", width: "180px"}
     - {name: "El Gato Gaming", description: "El Gato Gaming", link: "https://www.elgato.com/es/gaming", imageUrl: "none.png"}
     - {name: "Mensula Studio", description: "Mensula", link: "http://www.mensula.cat/", imageUrl: "logo_mensula.png"}
