Dani Villanueva image

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -5,7 +5,7 @@
     company: "Escola de Cinema de Reus"
     title: ""
     bio: ""
-    thumbnailUrl: unkown_boy.png
+    thumbnailUrl: daniVillanueva.jpg
     rockstar: true
     social:
     - {name: "site", link: "https://www.linkedin.com/in/daniel-villanueva-margalef-a9b62718/"}
