--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -15,7 +15,7 @@
     surname: "Muñiz"
     company: "Digivision"
     title: ""
-    thumbnailUrl: unkown_boy.png
+    thumbnailUrl: digivision.jpg
     rockstar: true
     social:
     - {name: "site", link: "https://www.linkedin.com/in/jose-antonio-mu%C3%B1iz-olivares-52746262/en"}
