--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -9,3 +9,4 @@
     - {name: "El Gato Gaming", description: "El Gato Gaming", link: "https://www.elgato.com/es/gaming", imageUrl: "logo_elgato.png", width: "130px"}
     - {name: "Mensula Studio", description: "Mensula", link: "http://www.mensula.cat/", imageUrl: "logo_mensula.png", width: "110px"}
     - {name: "URV", description: "URV", link: "http://www.urv.cat/localitzacio/10/escola-tecnica-superior-d%E2%80%99enginyeria", imageUrl: "logoURV.png", width: "110px"}
+    - {name: "Unity", description: "Unity", link: "https://unity3d.com/es", imageUrl: "logoUnity.png", width: "110px"}
